# learning

./: .gitignore  README.md  notes.org~
Cpp/01-first-program/: main.cpp
Cpp/cmake/official-tutorial/: .gitignore
Cpp/cmake/official-tutorial/project-1/: CMakeLists.txt  tutorial.cxx
Cpp/cmake/official-tutorial/project-2/: CMakeLists.txt  tutorial.cxx
Cpp/cmake/official-tutorial/project-2/MathFunctions/: CMakeLists.txt
Cpp/cmake/official-tutorial/project-3/: CMakeLists.txt
Cpp/learncpp-com/01-first-program/: main.cpp
Cpp/learncpp-com/02-standard-input/: main.cpp
Cpp/learncpp-com/04-second-program/: main.cpp
Java/Arrays/src/: Main.java
Java/ControlFlow/src/: Main.java
Java/FizzBuzz/src/: Main.java
Java/MortgageCalculator/src/: Main.java  MortgageCalculator.java
Java/ReferenceTypes/src/: Main.java
Java/Variables/src/: Main.java
Java/codingWithMosh/BasicMath/src/: Main.java
Java/codingWithMosh/MortgageCalculator/src/: Console.java  Main.java
Java/codingWithMosh/ReadingInput/src/: Main.java
Java/codingWithMosh/Strings/src/: Main.java
Java/codingWithMosh/wage/src/: Main.java
Java/udemy/Classes/src/: Car.java  Main.java
Java/udemy/ClassesChallenge/src/: Account.java  Main.java  (+1 more)
Java/wage/src/: Employee.java  Main.java
JavaScript/testing-postman/: notes.md
JavaScript/testing-postman/library-api/: Library.postman_collection.json  QA.postman_environment.json  UAT.postman_environment.json
Python/100daysPythonChallenge/001/: band-name-generator.py  printing.py
Python/testing-playwright/apify-tutorial/: async-playwright.py  crawlee-test.py  nike-scrape.py  notes.md
Python/testing-playwright/udemy/: notes.md
(+91 files in other folders)
